// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";

package piecestoreroutes;

service PieceStoreRoutes {
  rpc Piece(PieceId) returns (PieceSummary) {}

  rpc Retrieve(stream PieceRetrieval) returns (stream PieceRetrievalStream) {}

  rpc Store(stream PieceStore) returns (PieceStoreSummary) {}

  rpc Delete(PieceDelete) returns (PieceDeleteSummary) {}

}

message BandwidthAllocation {
  string payer = 1;
  string client = 2;
  int64 size = 3;
}

message PieceStore {
  message PieceData {
    string id = 1;
    int64 ttl = 2;
    bytes content = 3;
  }

  bytes signature = 1;
  BandwidthAllocation bandwidthallocation = 2;
  PieceData piecedata = 3;
}

message PieceId {
  string id = 1;
}

message PieceSummary {
  string id = 1;
  int64 size = 2;
  int64 expiration = 3;
}

message PieceRetrieval {
  message PieceData {
    string id = 1;
    int64 size = 2;
    int64 offset = 3;
  }

  bytes signature = 1;
  BandwidthAllocation bandwidthallocation = 2;
  PieceData pieceData = 3;
}

message PieceRetrievalStream {
  int64 size = 1;
  bytes content = 2;
}

message PieceDelete {
  string id = 1;
}

message PieceDeleteSummary {
  string message = 1;
}

message PieceStoreSummary {
  string message = 1;
  int64 totalReceived = 2;
}
